# cadquery-agent-sandbox

./: .dockerignore  .env.example  .gitignore  CAE_AGENT_README.md  CHANGELOG.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DIAGNOSTIC_REPORT.md  Dockerfile  IMPORT_FIX_SUMMARY.md  OPERATION_GUIDE.md  PROGRESS.md  PROJECT_REVIEW.md  PROJECT_REVIEW_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  USER_GUIDE.md  VISIBILITY_ANALYSIS.md  cae.bat  cae_agent_memory.md  cae_trigger.py  config.json  conversation_memory.py  create_test_files.py  document  example_usage.py  local_test.py  memory_export.json  memory_reviews.json  memory_skill_example.py  pyproject.toml  quick_test.py  requirements.txt  test_system.py
.Dashboard/: Dockerfile
.claude/: settings.local.json
.docker/: calculix.Dockerfile  ml.Dockerfile  server.Dockerfile  visualize.Dockerfile
.github/workflows/: ci-cd.yml
.server/: Dockerfile
.visualize/: Dockerfile
config/: celery_config.py  database_config.py  model_config.yaml
dashboard/: app.py
dashboard/components/: charts.py  three_d_viewer.py
dashboard/pages/: analysis.py  monitor.py  training.py  visualize.py
dashboard/utils/: __init__.py  imports.py
docker/: Dashboard.Dockerfile  docker-compose.yml  gmsh.Dockerfile  ml.Dockerfile  server.Dockerfile
docker-production/: docker-compose.yml
k8s/: deployment.yml
logs/daily/: 2026-01-30.md
memory_skill/: README.md  __init__.py  api_integration.py  config.py  conversation_memory.py  knowledge_extractor.py  memory_manager.py  memory_retriever.py  storage.py
memory_storage/: index.json
memory_storage/conversation/: mem_20260130_011301_52f945b9.json  mem_20260130_011301_8f3e21a7.json  mem_20260130_011301_93d73b37.json  mem_20260130_011301_bd942ecf.json  mem_20260130_011834_0ded88be.json  mem_20260130_011834_1bdf2fc4.json  mem_20260130_011834_5f06e7ae.json  mem_20260130_011834_7d6d197b.json
memory_storage/knowledge/: mem_20260130_011301_6c9b1721.json  mem_20260130_011301_7af0e5d8.json  mem_20260130_011301_91d3cd45.json  mem_20260130_011301_d9bfac8d.json  mem_20260130_011301_ed0f17ae.json  mem_20260130_011301_f4635292.json  mem_20260130_011834_659f5c1b.json  mem_20260130_011834_7e7f979d.json  mem_20260130_011834_ab5954e2.json  mem_20260130_011834_c10192c0.json  mem_20260130_011834_f25393ab.json  mem_20260130_011834_fe56870f.json
memory_storage/personal/: mem_20260130_011301_f53d05fe.json  mem_20260130_011834_1ee94a84.json
memory_storage/project/: mem_20260130_011301_c4c93323.json  mem_20260130_011834_0b8232eb.json
ml/: __init__.py
ml/date/: __init__.py
ml/models/: __init__.py  geometry_encoder.py  geometry_search.py  prediction_engine.py  regression_model.py  surrogate_model.py
ml/trainers/: __init__.py  surrogate_model.py  train_geometry.py  train_surrogate.py
nginx/: nginx.conf
scripts/: backup.sh  health_check.sh  memory_review_driver.py  setup.sh  start_all.sh  stop_all.sh  update_system.sh
secrets/: README.md
server/: __init__.py  celerybeat-schedule  data_collector.py  server.py  tasks.py
services/: __init__.py  mesh_service.py  solve_service.py  viz_service.py
test/analyses/: test.inp  test_cube.inp
test/input/: test.geo
全新系统配置/: Celery 任务队列系统  一键部署脚本  代理模型和回归预测支持  几何特征提取器  可视化服务  指南  数字孪生仪表盘主程序  🏗️ 完整 CAE 自动化平台架构
