[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cae-digital-twin"
version = "1.0.0"
description = "CAE Digital Twin Platform - Comprehensive FEM simulation and analysis platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CAE Platform Team", email = "team@cae-platform.com"}
]
keywords = [
    "cae",
    "fem",
    "simulation",
    "digital-twin",
    "mesh-generation",
    "engineering",
    "computational-mechanics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "celery[redis]>=5.3.4",
    "flower>=2.0.1",
    "streamlit>=1.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "redis>=5.0.1",
    "torch>=2.1.2",
    "scikit-learn>=1.3.2",
    "joblib>=1.3.2",
    "faiss-cpu>=1.7.4",
    "pyvista>=0.43.1",
    "plotly>=5.18.0",
    "matplotlib>=3.8.2",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "cadquery>=2.4.0",
    "tqdm>=4.66.1",
    "Pillow>=10.1.0",
    "imageio>=2.33.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "pre-commit>=3.5.0",
    "trivy>=0.45.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "grafana-api>=1.3.1",
]

[project.urls]
Homepage = "https://github.com/yd5768365-hue/cadquery-agent-sandbox"
Documentation = "https://cae-digital-twin.readthedocs.io"
Repository = "https://github.com/yd5768365-hue/cadquery-agent-sandbox"
Issues = "https://github.com/yd5768365-hue/cadquery-agent-sandbox/issues"

[project.scripts]
cae-dashboard = "dashboard.app:main"
cae-worker = "server.tasks:main"
cae-server = "server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dashboard*", "server*", "ml*", "services*"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.yaml", "*.yml", "*.json", "*.sql", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "venv", "build", "dist"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["test", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.main]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]
max-line-length = 100

[tool.pylint.format]
max-line-length = 100
